--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
                                 <!-- CONTACT FORM -->
                                 <div class="contact-form wow fadeIn animated" data-wow-offset="10" data-wow-duration="1.5s">
                                     <div id="message"></div>
-                                    <form action="https://formspree.io/umasiva979@gmail" method="POST" class="form-horizontal contact-1" role="form" name="contactform" id="contactform">
+                                    <form action="https://formspree.io/umasiva979@gmail.com" method="POST" class="form-horizontal contact-1" role="form" name="contactform" id="contactform">
                                         <div class="form-group">
                                             <div class="col-sm-6">
                                                 <input type="text" class="form-control" name="name" id="name" placeholder="Name">
