--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -545,7 +545,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="designer">
-                            <p>A Design By abi</a></p>
+                            <p>A Design By Abirama Krithika SivaShanmuga Gurukkal</a></p>
                         </div>
                     </div>
                 </div>
