--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                             <div class="collapse navbar-collapse zero_mp" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav navbar-right main_menu">
                                     <li class="active"><a href="#header">Home <span class="sr-only">(current)</span></a></li>
-                                    <li><a href="#">About</a></li>
+                                    <li><a href="#welcome">About</a></li>
                                     <li><a href="#testimonial">Products & Services</a></li>
                                     <li><a href="#contact">Contact us</a></li>
                                 </ul>
