--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                             <img src="img/img1.png" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>RECYCLING</h3>
-                                    <h2>Recycle your trash or trash your Earth.</h2>
+                                    <h3>ERASE YOUR E-WASTE</h3>
+                                    <h2>Trash is not the right place.Understand your E-Waste.</h2>
                                     <p> Lets go green as it makes environment clean.</p>
                                     <a href="#welcome" class="custom_btn">Read  More</a>
                                 </div>
@@ -147,8 +147,8 @@
                             <img src="img/img2.jpg" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>RECYCLING</h3>
-                                    <h2>Recycle your trash or trash your Earth.</h2>
+                                    <h3>ERASE YOUR E-WASTE</h3>
+                                    <h2>Trash is not the right place.Understand your E-Waste.</h2>
                                     <p>Lets go green as it makes environment clean.</p>
                                     <a href="#welcome" class="custom_btn">Read  More</a>
                                 </div>
@@ -161,8 +161,8 @@
                             <img src="img/img4.png" alt="...">
                             <div class="carousel-caption">
                                 <div class="slider_text">
-                                    <h3>RECYCLING</h3>
-                                    <h2>Recycle your trash or trash your Earth.</h2>
+                                    <h3>ERASE YOUR E-WASTE</h3>
+                                    <h2>Trash is not the right place.Understand your E-Waste.</h2>
                                     <p>Lets go green as it makes environment clean.</p>
                                     <a href="#welcome" class="custom_btn">Read  More</a>
                                 </div>
