--- a/index.html
+++ b/index.html
@@ -360,7 +360,10 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="testimonial_header text-center">
-							
+				<!-- The video -->
+<video autoplay muted loop id="myVideo">
+  <source src="img/rain.mp4" type="video/mp4">
+</video>			
 
                                 <h2>PRODUCTS & SERVICES</h2>
                                 <p></p>
